--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
           box-sizing: border-box;
 }
 
+body {
+  background: #E5E5E5;
+}
+
 .header {
   background: linear-gradient(107.89deg, #E1DDDB 0%, #F2F1ED 21.28%, #FDFCF9 65.53%, #E6E0DD 100.12%);
 }
@@ -511,6 +515,12 @@
 }
 
 .forma h1 {
+  font-weight: bold;
+  font-size: 26px;
+  letter-spacing: 0.01em;
+  text-transform: uppercase;
+  line-height: 39px;
+  font-family: 'Oswald', sans-serif;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -521,6 +531,7 @@
   display: -ms-flexbox;
   display: flex;
   padding-top: 64px;
+  color: #2E2B32;
   padding-bottom: 46px;
 }
 
@@ -554,14 +565,55 @@
           box-sizing: border-box;
 }
 
+.forma .form-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 540px;
+  margin-top: 24px;
+  padding-bottom: 58px;
+}
+
+.forma .form-flex p {
+  width: 201px;
+  height: 51px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 26px;
+  letter-spacing: 0.01em;
+  color: #4AC9F3;
+  padding-top: 7px;
+}
+
+.forma .form-flex p span {
+  text-decoration: underline;
+}
+
 .forma button {
   background: #2E2B32;
   border-radius: 36px;
   width: 190px;
   height: 68px;
   border: none;
-  margin-left: 15px;
-  margin-top: 36px;
+}
+
+.forma button ::after {
+  content: '';
+  background-image: url(Images/arrow.svg);
+  width: 28px;
+  height: 21px;
+  left: 556px;
+  top: 531px;
+  border: none;
+  color: #F6F5F1;
 }
 
 .forma button span {
@@ -570,7 +622,6 @@
   font-weight: 500;
   font-size: 24px;
   line-height: 36px;
-  /* identical to box height */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -580,16 +631,52 @@
   letter-spacing: 0.01em;
   text-transform: uppercase;
   color: #F6F5F1;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
-.forma button span span::after {
+footer {
+  background: #514E55;
+  height: 215px;
+}
+
+footer .container-fluid {
+  padding-top: 55px;
+}
+
+footer .nav-link {
+  color: #FFFFFF;
+}
+
+footer .footer-info p {
+  margin-top: 44px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  letter-spacing: 0.01em;
+  margin-left: 13px;
+  color: #757378;
+  margin-bottom: 48px;
+  position: relative;
+}
+
+footer .footer-info p ::after {
   content: '';
-  background-image: url(Images/arrow.svg);
-  width: 28px;
-  height: 21px;
-  left: 556px;
-  top: 531px;
-  border: none;
-  color: #F6F5F1;
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  border: 1px solid #757378;
+  color: #757378;
+  padding-top: 19px;
 }
 /*# sourceMappingURL=style.css.map */
