--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,9 @@
 @import url(./style/_breackpoints.scss);
 @import url(./style/_variables.scss);
 
+body {
+  background: #E5E5E5;
+}
 
 .header {
   background: linear-gradient(107.89deg, #E1DDDB 0%, #F2F1ED 21.28%, #FDFCF9 65.53%, #E6E0DD 100.12%);
@@ -487,10 +490,17 @@
   }
 
   h1 {
+    font-weight: bold;
+    font-size: 26px;
+    letter-spacing: 0.01em;
+    text-transform: uppercase;
+    line-height: 39px;
+    font-family: 'Oswald', sans-serif;
     align-items: center;
     justify-content: center;
     display: flex;
     padding-top: 64px;
+    color: #2E2B32;
     padding-bottom: 46px;
   }
 
@@ -522,15 +532,50 @@
     }
   }
 
+  .form-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 540px;
+    margin-top: 24px;
+    padding-bottom: 58px;
+
+    p {
+      width: 201px;
+      height: 51px;
+      font-family: 'Poppins', sans-serif;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 15px;
+      line-height: 26px;
+      letter-spacing: 0.01em;
+      color: #4AC9F3;
+      padding-top: 7px;
+
+      span {
+        text-decoration: underline;
+      }
+    }
+  }
+
   button {
     background: #2E2B32;
     border-radius: 36px;
     width: 190px;
     height: 68px;
     border: none;
-    margin-left: 15px;
-    margin-top: 36px;
 
+
+    ::after {
+      content: '';
+      background-image: url(Images/arrow.svg);
+      width: 28px;
+      height: 21px;
+      left: 556px;
+      top: 531px;
+      border: none;
+      color: #F6F5F1;
+    }
 
     span {
       font-family: 'Oswald', sans-serif;
@@ -538,24 +583,61 @@
       font-weight: 500;
       font-size: 24px;
       line-height: 36px;
-      /* identical to box height */
       display: flex;
       align-items: center;
       letter-spacing: 0.01em;
       text-transform: uppercase;
-
       color: #F6F5F1;
+      display: flex;
+      justify-content: space-evenly;
 
-      span::after {
-        content: '';
-        background-image: url(Images/arrow.svg);
-        width: 28px;
-        height: 21px;
-        left: 556px;
-        top: 531px;
-        border: none;
-        color: #F6F5F1;
-      }
     }
   }
+}
+
+// footer
+
+footer {
+  background: #514E55;
+  height: 215px;
+
+  .container-fluid {
+    padding-top: 55px;
+  }
+
+  .nav-link {
+    color: #FFFFFF;
+  }
+
+  .footer-info {
+
+    p {
+      margin-top: 44px;
+      font-family: 'Poppins', sans-serif;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 15px;
+      line-height: 22px;
+      display: flex;
+      align-items: center;
+      letter-spacing: 0.01em;
+      margin-left: 13px;
+      color: #757378;
+      margin-bottom: 48px;
+      position: relative;
+
+      ::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        border: 1px solid #757378;
+        color: #757378;
+        padding-top: 19px;
+      }
+    }
+
+
+  }
+
 }
