--- a/style.scss
+++ b/style.scss
@@ -209,8 +209,8 @@ body {
 
   .row {
     .col {
-      width: 214px;
-      height: 222px;
+      // width: 214px;
+      // height: 222px;
       background: linear-gradient(180deg, rgba(196, 196, 196, 0) 0%, rgba(23, 128, 155, 0.1) 73.44%);
       margin: 10px;
 
@@ -400,7 +400,7 @@ body {
     margin-bottom: 48px;
     color: #2E2B32;
   }
-
+ 
   .col {
     p {
       font-family: 'Poppins', sans-serif;
@@ -418,21 +418,45 @@ body {
 
 // end line section
 
+
+
+
+
+
+
 // list section
 .list {
-  // img{
-  //   // background-image: url(Images/tapes.png);
-  //   background-position: right;
-  //   background-repeat: no-repeat;
-  //   // transform: rotate(-15deg);
-  //   background-size: cover;
-  //   z-index: -1;
-  // }
+  height: 512px;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 
+  .img {
+    position: absolute;
+    z-index: 1;
+    background: linear-gradient( 
+  281.7deg
+  , #302C34 11.23%, #59555D 42.92%, #4A474F 52.23%, #232224 94.08%);
+  }
+
+  ol#blue {
+    z-index: 2;
+  }
+  
+  .list-demo-kit {
+    position: absolute;
+  }
+  
+  // section.list {
+  //   position: relative;
+   
+  // }
 
   .row {
 
-    max-height: 512px;
+    // max-height: 512px;
     background: linear-gradient(281.7deg, #302C34 11.23%, #59555D 42.92%, #4A474F 52.23%, #232224 94.08%);
 
     ol {
