--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ body {
   color: #5D676F;
 }
 
+.updated {
+  position: absolute;
+  z-index: 2;
+}
+
 .btn-outline-info {
   width: 100px;
   height: 33px;
@@ -91,9 +96,8 @@ body {
 }
 
 .my-bg {
-  background-image: url(Images/header-img.png);
-  background-position: 227%;
-  background-repeat: no-repeat;
+  position: absolute;
+  right: -300px;
 }
 
 .my-btn {
@@ -182,6 +186,8 @@ body {
   background: #CED5D8;
   width: 100%;
   height: 90px;
+  margin: 0 12px;
+  max-width: calc(100% - 24px);
 }
 
 .header-bottom p {
@@ -302,14 +308,27 @@ body {
   color: #FFFFFF;
 }
 
+.products .container {
+  padding: 0 24px;
+  overflow: hidden;
+  position: relative;
+  min-height: 712px;
+}
+
 .products .align-items-center {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding-bottom: 30px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  min-height: 712px;
+  overflow: hidden;
 }
 
 .products .align-items-center .col {
