--- a/style.scss
+++ b/style.scss
@@ -26,6 +26,13 @@ body {
   color: #5D676F;
 }
 
+
+
+.updated {
+  position: absolute;
+  z-index: 2;
+}
+
 .btn-outline-info {
   width: 100px;
   height: 33px;
@@ -82,9 +89,8 @@ body {
 }
 
 .my-bg {
-  background-image: url(Images/header-img.png);
-  background-position: 227%;
-  background-repeat: no-repeat;
+  position: absolute;
+  right: -300px;
 }
 
 // headers btns
@@ -164,6 +170,8 @@ body {
   background: #CED5D8;
   width: 100%;
   height: 90px;
+  margin: 0 12px;
+  max-width: calc(100% - 24px);
 
   p {
     // font-family: $font-size;
@@ -277,10 +285,20 @@ body {
     }
   }
 
+  .container {
+    padding: 0 24px;
+    overflow: hidden;
+    position: relative;
+    min-height: 712px;
+  }
+
   .align-items-center {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     padding-bottom: 30px;
+    flex-direction: row;
+    min-height: 712px;
+    overflow: hidden;
 
     .col {
       font-family: 'Poppins', sans-serif;
